--- a/public/styling/_browser.scss
+++ b/public/styling/_browser.scss
@@ -1,8 +1,24 @@
+@use "variables";
+
 @mixin focus-effect($color: white) {
     outline: 1px solid $color;
 }
 
 .disable-scroll {
-    // margin: 0;
     overflow: hidden
+}
+
+::-webkit-scrollbar {
+    width: 0.5em;
+    height: 0.5em;
+}
+
+::-webkit-scrollbar-track {
+    background-color: variables.$main-background-col;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: variables.$mid-gray-col;
+    outline: none;
+    border-radius: variables.$border-rad;
 }
