--- a/public/styling/main.scss
+++ b/public/styling/main.scss
@@ -90,16 +90,15 @@ h2 {
     font-weight: bold;
 }
 
-#add-movie-button {
+#add-movie-page-button {
     height: 3.5em;
     width: 3.5em;
 
-    margin: 0;
+    margin: 1em auto;
     border-radius: 100px;
     cursor: pointer;
     background-color: transparent;
     border: white 2px solid;
-
     padding: 0;
 
     transition: background-color 250ms;
@@ -114,20 +113,9 @@ h2 {
     }
 }
 
-// TODO: This likely doesnt work on firefox!!
-::-webkit-scrollbar {
-    width: 0.5em;
-    height: 0.5em;
-}
-
-::-webkit-scrollbar-track {
-    background-color: variables.$main-background-col;
-}
-
-::-webkit-scrollbar-thumb {
-    background-color: variables.$mid-gray-col;
-    outline: none;
-    border-radius: variables.$border-rad;
+#add-movie-button {
+    @include button.button-light;
+    margin: 1em auto;
 }
 
 .card-banner{
@@ -171,8 +159,8 @@ h2 {
     $default-color: rgb(186, 186, 186);
 
     height: 20px + $card-height * $scale-factor;
-    margin: 2em 0em 4em 0.25em;
-    width: 100%;
+    margin: 0 auto;
+    width: 95%;
     display: flex;
     column-gap: 0.5em;
     overflow-y: hidden;
@@ -260,7 +248,6 @@ h2 {
     gap: 4em 1.5em;
     overflow: auto;
     flex-flow: wrap;
-    width: 100%;
     height: 100%;
 }
 
@@ -304,6 +291,7 @@ h2 {
 
     .movie-page-container {
         margin: 1em;
+        gap: 2em;
         display: flex;
 
         #movie-details-poster {
@@ -314,11 +302,15 @@ h2 {
         }
 
         .details-container {
+            margin-bottom: 1em;
             display: flex;
+            width: 100%;
+            justify-content: space-evenly;
+            gap: 1em;
 
             .details {
                 box-sizing: content-box;
-                margin-right: 3em;
+                width: 30%;
 
                 h2 {
                     margin-top: 0;
@@ -331,7 +323,6 @@ h2 {
                 }
 
                 #movie-details-synopsis {
-                    width: 25vw;
                     margin: 0;
                 }
             }
@@ -343,9 +334,15 @@ h2 {
     }
 }
 
-#movie-page-exit-button {
+.exit-button {
+    width: 4em;
+    height: 4em;
     margin-left: auto;
     margin-right: 0;
+}
+
+#movie-add-page-exit-button{
+    margin: 0;
 }
 
 .section-light {
@@ -436,11 +433,6 @@ h2 {
     form {
         width: 65%;
     }
-
-    #movie-add-page-exit-button {
-        width: 5%;
-        margin: 0.5em;
-    }
 }
 
 textarea {
@@ -465,6 +457,11 @@ textarea {
 .flex-container {
     display: flex;
     margin: 1em;
+    gap: 1em;
+}
+
+.flex-justify-center{
+    justify-content: center;
 }
 
 br {
@@ -585,11 +582,6 @@ input[type=date] {
             cursor: pointer;
         }
     }
-}
-
-#add-movie-button {
-    @include button.button-light; // inherit from button-light
-    margin: 0 auto; // center
 }
 
 #add-review-button {
