--- a/public/styling/main.scss
+++ b/public/styling/main.scss
@@ -25,7 +25,7 @@ h2 {
     margin: 0.25em;
 }
 
-#home-page{
+#home-page {
     margin: 0;
 }
 
@@ -119,35 +119,35 @@ h2 {
     margin: 1em auto;
 }
 
-.card-banner{
+.card-banner {
     $banner-height: 6em;
-    
+
     display: block;
     width: 100%;
     background-color: rgba(0, 0, 0, 0.7);
     backdrop-filter: blur(5px);
     position: relative;
-    
+
     height: $banner-height;
     top: -$banner-height;
 
     // just bottom
     border-bottom-left-radius: variables.$border-rad;
     border-bottom-right-radius: variables.$border-rad;
-    
-    strong{
+
+    strong {
         display: block;
         margin-left: 1em;
     }
 
-    .card-average-stars-container{
+    .card-average-stars-container {
         display: flex;
         justify-content: space-evenly;
         display: flex;
         margin: 0 auto;
     }
 
-    .star{
+    .star {
         width: 2em;
         margin: 1em 0;
     }
@@ -171,9 +171,12 @@ h2 {
         height: $card-height;
 
         box-sizing: border-box;
+
         background-image: url("../images/poster_na.jpg");
         background-size: cover;
         background-repeat: none;
+        background-position: center center;
+
         height: $card-height;
         border-radius: variables.$border-rad;
         margin: 0.25em;
@@ -227,7 +230,7 @@ h2 {
                     }
                 }
 
-                .card-review-text{
+                .card-review-text {
                     width: 100%;
                     display: block;
                     word-wrap: break-word;
@@ -244,7 +247,7 @@ h2 {
     }
 }
 
-.card-container-long{
+.card-container-long {
     @extend .card-container;
     gap: 4em 1.5em;
     overflow: auto;
@@ -275,7 +278,7 @@ h2 {
         .movie-title-container {
             width: 100%;
 
-            #movie-sub-title{
+            #movie-sub-title {
                 margin-left: 1em;
             }
         }
@@ -342,7 +345,7 @@ h2 {
     margin-right: 0;
 }
 
-#movie-add-page-exit-button{
+#movie-add-page-exit-button {
     margin: 0;
 }
 
@@ -463,7 +466,7 @@ textarea {
     gap: 1em;
 }
 
-.flex-justify-center{
+.flex-justify-center {
     justify-content: center;
 }
 
@@ -607,7 +610,7 @@ input[type=date] {
     margin-left: 1.5em;
 }
 
-#movie-details-remove-icon{
+#movie-details-remove-icon {
     border-color: variables.$error-color;
 }
 
@@ -646,7 +649,7 @@ label {
     // Target landscape smartphones and narrow desktop
 
     // just hide nav anchors
-    nav > div > a{
+    nav>div>a {
         display: none !important;
     }
 
@@ -655,6 +658,12 @@ label {
 @media screen and (max-width:719px) {
     // Target portrait smartphones
 
+    body{
+        margin: 0 !important;
+        width: 90vw !important;
+        height: 150vh !important; // make sure there is enough space for the nav bar
+    }
+
     // reduce font size 
     h1 {
         font-size: 1.4em;
@@ -662,6 +671,9 @@ label {
     }
 
     #main-header {
+        position: fixed !important;
+        top: 0;
+
         display: block !important; // !important overrides the display: flex
 
         // reformat top search area
@@ -694,8 +706,8 @@ label {
         }
     }
 
-    #movie-add-page{
-        > .flex-container{
+    #movie-add-page {
+        >.flex-container {
             margin: 1em auto;
             width: 90%;
             flex-direction: column;
@@ -704,21 +716,76 @@ label {
         }
     }
 
-    
-    .input-multi, input{
+
+    .input-multi,
+    input {
         width: 60vw;
     }
 
-    .big-text-input{
+    .big-text-input {
         width: 85vw;
     }
 
-    #add-movie-image-upload-area{
+    #add-movie-image-upload-area {
         width: 100% !important;
         height: 200px !important;
 
-        .add-movie-image-upload-instructions{
+        .add-movie-image-upload-instructions {
             margin: 2em !important;
         }
+    }
+
+    .exit-button {
+        position: fixed;
+        right: 0.5em;
+        bottom: 7em;
+        z-index: 10;
+    }
+
+    // don't center on mobile
+    .flex-justify-center {
+        justify-content: left;
+    }
+
+    .movie-page-container {
+        flex-direction: column;
+        gap: 1em;
+    }
+
+    .movie-information {
+        margin: 0 !important;
+        width: 100% !important;
+
+        .details-container {
+            flex-direction: column;
+            gap: 2em !important;
+
+            .details {
+                width: 100% !important;
+            }
+        }
+    }
+
+    #movie-details-poster{
+        width: 70% !important;
+        margin: 0 auto;
+    }
+
+    #add-movie-button{
+        margin: 1em 1em 10em 1em !important;
+    }
+
+    section{
+        margin-top: 30% !important; // nar bar
+    }
+
+    .section-light{
+        width: 100%;
+        margin: auto;
+    }
+
+    #add-review-button{
+        margin: 2em auto !important;
+        margin-bottom: 4em !important;
     }
 }
