--- a/public/styling/main.scss
+++ b/public/styling/main.scss
@@ -788,4 +788,8 @@ label {
         margin: 2em auto !important;
         margin-bottom: 4em !important;
     }
+
+    #movie-details-page{
+        height: 250vh !important;
+    }
 }
